name:          cs421-project-erick2
version:       0.1.0.0
synopsis:      4th hour project for CS 421 Summmer 2017 erick2
license:       BSD3
license-file:  LICENSE
build-type:    Simple
cabal-version: >=1.10

executable main
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base , containers >= 0.5.7.1
  default-language: Haskell2010

test-suite test
  type:             exitcode-stdio-1.0
  other-modules:    Main , Spec , Tests
  hs-source-dirs:   src , test
  main-is:          Spec.hs
  build-depends:    base , containers >= 0.5.7.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
  default-language: Haskell2010